--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -28,6 +28,17 @@
     padding: 0.35rem;
 }
 
+.error label{
+    color: rgb(136,2,2);
+}
+
+.error input{
+    border-color: rgb(136,2,2);
+    color: rgb(136,2,2);
+    background-color: rgb(253,219,219);
+}
+
+
 #game-configuration
 {
     width: 90%;
@@ -75,3 +86,4 @@
     color: rgb(47,4,82);
     margin: 0.5rem 0;
 }
+
