--- a/styles/game.css
+++ b/styles/game.css
@@ -2,7 +2,7 @@
 {
     text-align: center;
     margin: 2rem 0 5rem 0;
-    /* display: none; */
+    display: none;
 }
 
 #game-over
@@ -44,7 +44,8 @@
 #game-board li
 {
     background-color: rgb(215,187,247);
-    padding: 1rem;
+    height: 5rem;
+    width: 6rem;
     border-radius: 2px;
     cursor: pointer;
     display: flex;
